--- a/src/App.css
+++ b/src/App.css
@@ -51,9 +51,23 @@ h3 {
   font-size: 24px;
 }
 p {
-  font-size: 18px;
+  font-size: 16px;
 }
 
+@media screen and (max-width: 1200px) {
+  h1 {
+    font-size: 32px;
+  }
+  h2 {
+    font-size: 24px;
+  }
+  h3 {
+    font-size: 18px;
+  }
+  p {
+    font-size: 16px;
+  }
+}
 @media screen and (max-width: 768px) {
   h1 {
     font-size: 32px;
